source/nginx-ingress/nginx-ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /packages
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
  name: nginx-ingress
  namespace: default
spec:
  rules:
    - http:
        paths:
          - path: /(.*) # regex para que qualquer endereço capturado seja redirecionado para o rewrite-target
            backend:
              serviceName: node-svc
              servicePort: 80
